- Makefile: Compile with -O2 by default, or -Os only when short of space. (VRI)
- aes/gemdisp.c aes/gemfmalt.c aes/geminit.c aes/gemshlib.c
  aes/gemsuper.c: Replaced DBG_xxx with KDEBUG(). (RFB)
- bdos/osmem.c: Replaced DBG_xxx with KDEBUG(). (RFB)
- bios/biosmem.c bios/clock.c bios/dmasound.c bios/font.c bios/ikbd.c
  bios/machine.c bios/mouse.c bios/nvram.c bios/videl.c:  Replaced
  DBG_xxx with KDEBUG(). (RFB)

2014-02-24
- include/config.h: Fix regression in emutos-aranym handling of IDE. (RFB)

2014-02-25
- bdos/fsdir.c: Fix formatting within xsnext() function. (RFB)

2014-02-26
- doc/bugs.txt: Updated. Contributed by Eero Tamminen. (VRI)
- Makefile: Reverted compilation with -O2 for the bugfix release. (VRI)
- readme.txt doc/announce.txt: Updated. (VRI)

* Release: 0.9.3

2014-02-27
- Makefile: Compile with -O2 by default, or -Os only when short of space. (VRI)

2014-02-28
- bdos/fs.h bdos/fsdir.c bdos/fsdrive.c bdos/proc.c: Avoid creating
  duplicate entries in table of current directories. (RFB)

2014-03-01
- bdos/bdosmain.c bdos/fsdir.c: Fix boundary checking for 'current
  directory' array. (RFB)
- bdos/fs.h bdos/fshand.c bdos/proc.c: When creating new process, don't
  increment 'current directory' usage count for dummy entry 0. (RFB)

2014-03-02
- bios/blkdev.c: Atari TOS compatibility: force reserved sector count to
  be at least 1. Suggested by Eero Tamminen. (RFB)

2014-03-03
- include/compat.h include/config.h: Move configuration #defines to
  config.h. (RFB)
- include/compat.h desk/deskmain.c: Code cleanup: remove unused #define. (RFB)
- aes/* desk/*: Code cleanup: eliminate use of compat.h. (RFB)
- bdos/fsdir.c: Do not attempt to track in-use directories (fixes
  bugtracker #13). (RFB)

2014-03-04
- bdos/bdosmain.c bdos/fs.h bdos/fsdir.c bdos/fsdrive.c bdos/proc.c:
  Code cleanup: combine diruse[], dirtbl[] into array of struct. (RFB)
- include/compat.h: Remove, no longer used. (RFB)